# groundlens

./: .gitignore  .pre-commit-config.yaml  404.html  AGENTS.md  CHANGELOG.md  CLAUDE.md  CNAME  CODEOWNERS  CONTRIBUTING.md  DATA_HANDLING.md  GRAPH.md  LICENSE  README.md  README2.md  SECURITY.md  VISION.md  index.html  llms.txt  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: benchmark.yml  ci.yml  codeql.yml  docs.yml  release.yml  scorecard.yml
adr/0001-rule-set-architecture/: index.html
api/: index.html
api/SUMMARY/: index.html
api/groundlens/: index.html
api/groundlens/agents/: index.html
api/groundlens/audit/: index.html
api/groundlens/calibrate/: index.html
api/groundlens/check/: index.html
api/groundlens/cli/: index.html
api/groundlens/compliance/: index.html
api/groundlens/data/: index.html
api/groundlens/dgi/: index.html
api/groundlens/evaluate/: index.html
api/groundlens/integrations/: index.html
api/groundlens/propose/: index.html
api/groundlens/providers/: index.html
api/groundlens/rules/: index.html
api/groundlens/score/: index.html
api/groundlens/sgi/: index.html
api/groundlens/verdict/: index.html
benchmarks/: compare_methods.py  confabulation_benchmark.py  performance_profile.py  reasoning_groundlens_encoders.ipynb
benchmarks/overview/: index.html
benchmarks/results/: index.html
concepts/calibration/: index.html
concepts/dgi/: index.html
concepts/how-it-works/: index.html
concepts/sgi/: index.html
deploy/api/: Dockerfile  README.md  app.py  requirements.txt
docs/: index.md  llms.txt
docs/adr/: 0001-rule-set-architecture.md
docs/api/: index.md
docs/benchmarks/: overview.md  results.md
docs/concepts/: calibration.md  dgi.md  how-it-works.md  sgi.md
docs/getting-started/: cli.md  installation.md  quickstart.md
docs/guides/: active-learning.md  banking-deployment.md  batch-evaluation.md  custom-encoders.md  custom-rule-sets.md  domain-calibration.md  eu-ai-act.md  nist-ai-rmf.md  rag-verification.md  second-stage.md  sr-11-7.md
docs/integrations/: autogen.md  crewai.md  langchain.md  langgraph.md  semantic-kernel.md
docs/providers/: anthropic.md  google.md  openai.md
docs/theory/: confabulation-boundary.md  dgi-mathematics.md  embedding-geometry.md  hallucination-taxonomy.md
docs/tutorial/: 01-first-check.md  02-the-blind-spot.md  03-a-verification-loop.md  index.md
examples/: anthropic_guard.py  batch_evaluation.py  crewai_tool.py  custom_calibration.py  custom_rules.py  eu_ai_act_compliance_agent.ipynb  eu_ai_act_live_pipeline.ipynb  groundlens_x_facts_grounding.ipynb  langchain_evaluator.py  langgraph_familiarity_circuit.ipynb  openai_guard.py  quickstart.py  rag_pipeline.py  ragtruth_A3_variant_findings.md  ragtruth_precision_stratified_report.md  second_stage.py  semantic_kernel_filter.py  sgi_canonical_revalidation.md  sgi_threshold_sweep.json
getting-started/cli/: index.html
getting-started/installation/: index.html
getting-started/quickstart/: index.html
guides/active-learning/: index.html
guides/banking-deployment/: index.html
guides/batch-evaluation/: index.html
guides/custom-encoders/: index.html
guides/custom-rule-sets/: index.html
guides/domain-calibration/: index.html
guides/eu-ai-act/: index.html
guides/nist-ai-rmf/: index.html
guides/rag-verification/: index.html
guides/second-stage/: index.html
guides/sr-11-7/: index.html
integrations/autogen/: index.html
integrations/crewai/: index.html
integrations/langchain/: index.html
integrations/langgraph/: index.html
integrations/semantic-kernel/: index.html
providers/anthropic/: index.html
providers/google/: index.html
providers/openai/: index.html
requirements/: build.txt
search/: search_index.json
src/groundlens/: __init__.py  _version.py  audit.py  calibrate.py  check.py  compliance.py  dgi.py  evaluate.py  propose.py  rules.py  score.py  sgi.py  verdict.py
src/groundlens/_internal/: csv_loader.py  embeddings.py  geometry.py  reference.py  strategies.py  thresholds.py
src/groundlens/agents/: __init__.py  customer_support.py  rag.py  routing.py  specialized.py
src/groundlens/cli/: main.py
src/groundlens/data/: __init__.py  banking_reference_pairs.csv  generic_reference.json  reference_pairs.csv
src/groundlens/integrations/: __init__.py
src/groundlens/providers/: __init__.py  _base.py  anthropic.py  google.py  hf.py  openai.py
tests/: conftest.py
tests/integration/: test_dgi.py  test_dgi_inline_calibration.py  test_encoder_injection.py  test_evaluate.py  test_sgi.py
tests/integrations/: test_autogen.py  test_crewai.py  test_langchain.py  test_langgraph.py  test_semantic_kernel.py
tests/providers/: test_anthropic.py  test_google.py  test_openai.py
tests/unit/: test_agents.py  test_calibrate.py  test_certified_reference.py  test_check.py  test_cli.py  test_csv_loader.py  test_dgi_local.py  test_dgi_sgi_validation.py  test_embeddings.py  test_evaluate.py  test_geometry.py  test_no_egress.py  test_propose_labels.py  test_rules.py  test_score.py  test_thresholds.py  test_verdict.py
tests/verify/: test_check_builder.py  test_detector_logic.py  test_detector_wiring.py  test_generators.py  test_hf_generator.py  test_import_invariant.py  test_samplers.py  test_scorers_logic.py  test_shim_and_samplers.py  test_two_stage.py  test_wikibio_repro.py
theory/confabulation-boundary/: index.html
theory/dgi-mathematics/: index.html
theory/embedding-geometry/: index.html
theory/hallucination-taxonomy/: index.html
theory/sgi-mathematics/: index.html
tutorial/: index.html
tutorial/01-first-check/: index.html
tutorial/02-the-blind-spot/: index.html
tutorial/03-a-verification-loop/: index.html
(+42 files in other folders)
